--- a/src/main/resources/assets/analyzeio/lang/zh_CN.lang
+++ b/src/main/resources/assets/analyzeio/lang/zh_CN.lang
@@ -7,14 +7,14 @@ analyzeio.lootcaps.all.energy_intake_base=§fFallback Power intake %s
 
 analyzeio.lootcaps.all.energy_buffer=§f所有机器能量缓冲 %s
 analyzeio.lootcaps.all.energy_intake=§f所有机器能量输入 %s
-analyzeio.lootcaps.all.energy_use=§f所有机器能量使用 %s
+analyzeio.lootcaps.all.energy_use=§f所有机器能量消耗 %s
 analyzeio.lootcaps.all.speed=§f所有机器速度 %s
 analyzeio.lootcaps.all.area=§f所有机器范围 %s
 analyzeio.lootcaps.all.amount=§f所有机器 %s
 
 analyzeio.lootcaps.energy_buffer=§f%s能量缓冲 %s
 analyzeio.lootcaps.energy_intake=§f%s能量输入 %s
-analyzeio.lootcaps.energy_use=§f%s能量使用 %s
+analyzeio.lootcaps.energy_use=§f%s能量消耗 %s
 analyzeio.lootcaps.speed=§f%s速度 %s
 analyzeio.lootcaps.area=§f%s范围 %s
 analyzeio.lootcaps.amount=§f%s %s
@@ -25,7 +25,7 @@ analyzeio.lootcaps.not_analyzed=§c电容未经分析§r
 analyzeio.capacitor.base_level=基础等级
 analyzeio.capacitor.energy_buffer=能量缓冲
 analyzeio.capacitor.energy_intake=能量输入
-analyzeio.capacitor.energy_use=能量使用
+analyzeio.capacitor.energy_use=能量消耗
 analyzeio.capacitor.speed=速度
 analyzeio.capacitor.area=范围
 analyzeio.capacitor.amount=数量
